# templates

./: .gitignore  flake.nix
templates/haskell/: README.org  develop.nix  flake.nix  hie.yaml  overlay.nix
templates/haskell/haedosa-app/: haedosa-app.cabal
templates/haskell/haedosa-app/src/: haedosa.hs
templates/haskell/haedosa-app/src/Haedosa/: App.hs
templates/haskell/haedosa-lib/: haedosa-lib.cabal
templates/haskell/haedosa-lib/src/Haedosa/: Lib.hs
templates/haskell/haedosa-lib/test/Test/: Trivial.hs
templates/python/: overlay.nix
templates/python-jupyter/: README.org  develop.nix  flake.nix
