cabal-version:         2.4
name:                  haedosa-lib
version:               0.1.0.0

common common
  build-depends:
      base
  build-tools:
    tasty-discover
  default-language:    Haskell2010
  ghc-options:
    -O2 -j
    -eventlog
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-deriving-strategies
    -Wno-missing-safe-haskell-mode
  default-extensions:
      AllowAmbiguousTypes
    , BangPatterns
    , BlockArguments
    , ConstraintKinds
    , DataKinds
    , DefaultSignatures
    , DeriveAnyClass
    , DeriveDataTypeable
    , DeriveFoldable
    , DeriveFunctor
    , DeriveGeneric
    , DeriveTraversable
    , DerivingStrategies
    , DerivingVia
    , DisambiguateRecordFields
    , DuplicateRecordFields
    , EmptyCase
    , EmptyDataDeriving
    , ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GADTs
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , InstanceSigs
    , KindSignatures
    , LambdaCase
    , MultiParamTypeClasses
    , MultiWayIf
    , NamedFieldPuns
    , NoStarIsType
    , NumericUnderscores
    , OverloadedLabels
    , OverloadedRecordDot
    , OverloadedStrings
    , PartialTypeSignatures
    , PatternSynonyms
    , PolyKinds
    , QuasiQuotes
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , StandaloneDeriving
    , StandaloneKindSignatures
    , TemplateHaskell
    , TupleSections
    , TypeApplications
    , TypeFamilies
    , TypeFamilyDependencies
    , TypeOperators
    , TypeSynonymInstances
    , UndecidableInstances
    , ViewPatterns


library
  import:              common
  hs-source-dirs:      src
  exposed-modules:
    Haedosa.Lib

test-suite test-haedosa-lib
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:
      haedosa-lib
    , tasty
    , tasty-hunit
    , tasty-hspec
    , tasty-golden
    , tasty-hedgehog
    , tasty-smallcheck
    , tasty-quickcheck
    , tasty-expected-failure
  other-modules:
    Test.Trivial
